gitops/document-app/web-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-web
  namespace: document-app
  labels:
    app: document-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: document-web
  template:
    metadata:
      labels:
        app: document-web
    spec:
      containers:
        - name: document-web
          image: 411653575766.dkr.ecr.us-east-1.amazonaws.com/eks-efs-storage-dev-document-app:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: document-storage
              mountPath: /app/uploads
            - name: processed-storage
              mountPath: /app/processed
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: document-storage
          persistentVolumeClaim:
            claimName: document-storage
        - name: processed-storage
          persistentVolumeClaim:
            claimName: document-storage
